# advanced-mlops

./: .gitignore  README.md  pyproject.toml
api/: bentofile.yaml  service.py  services.py
api/docker/: Dockerfile  docker-compose.yml
db/docker-entrypoint-initdb.d/: 01_create_table.sql
docs/: M1. MLOps 개념.md  M2. 활용 도구 익히기.md  M3. MLOps 파이프라인 개발 (CT).md  M4. MLOps 파이프라인 개발 (CD).md
pipelines/continuous_deployment/: continuous_deployment_dag.py
pipelines/continuous_training/: continuous_training_dag.py
pipelines/continuous_training/data_extract/: features.sql
pipelines/continuous_training/data_preprocessing/: preprocessor.py
pipelines/continuous_training/docker/: Dockerfile  docker-compose.yml  requirements.txt
pipelines/continuous_training/training/: trainer.py
